# backend-task

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: skill-bootstrap.md
.claude/skills/prompt-topic-classifier/: SKILL.md
.claude/skills/python-api-conventions/: SKILL.md
.claude/skills/testing-patterns/: SKILL.md
.claude/skills/tradeoff-writing/: SKILL.md
docs/: FIRST_15_MINUTES.md  README.md
postman/: README.md  aim-prompt-guardrail.postman_collection.json
scripts/: README.md  smoke_test.sh
src/: README.md  main.py
src/api/: README.md  audit.py  detection.py
src/classifiers/: README.md  client.py
src/core/: README.md  config.py  logging.py  middleware.py
src/models/: README.md  detection.py
src/services/: README.md  audit.py  detection.py
tests/: README.md
tests/integration/: test_detection.py  test_health.py  test_logs.py
tests/unit/: test_classifier.py
